--- a/spotiwood.ui/src/Spotiwood.UI.App/wwwroot/index.html
+++ b/spotiwood.ui/src/Spotiwood.UI.App/wwwroot/index.html
@@ -6,18 +6,19 @@
     <title>Spotiwood.UI.App</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
-    
-    <!-- If you add any scoped CSS files, uncomment the following to load them
-    <link href="Spotiwood.UI.App.styles.css" rel="stylesheet" /> -->
+    <link href="app.css" rel="stylesheet" />
 </head>
 
-<body>
-    <div id="app">Loading...</div>
+<body class="bg-no-repeat bg-cover bg-center bg-[url('/res/background.avif')]">
+    <div id="app" class="flex w-full min-h-screen"></div>
 
     <div id="blazor-error-ui">
         An unhandled error has occurred.
         <a href="" class="reload">Reload</a>
         <a class="dismiss">🗙</a>
+    </div>
+    <div id="copyright-photo" class="absolute bottom-2 right-2 text-xs text-slate-400">
+        Photo by <a href="https://unsplash.com/@etiennegirardet?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Etienne Girardet</a> on <a href="https://unsplash.com/photos/OA0qcP6GOw0?utm_source=unsplash&utm_medium=referral&utm_content=creditCopyText">Unsplash</a>
     </div>
     <script src="_content/Microsoft.AspNetCore.Components.WebAssembly.Authentication/AuthenticationService.js"></script>
     <script src="_framework/blazor.webassembly.js"></script>
